[gd_scene load_steps=25 format=2]

[ext_resource path="res://5 Misc/worldenv.tres" type="Environment" id=1]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_playbtn.tres" type="DynamicFont" id=2]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_custombtn.tres" type="DynamicFont" id=3]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_settingsbtn.tres" type="DynamicFont" id=4]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_storebtn.tres" type="DynamicFont" id=5]
[ext_resource path="res://4 Styling/1 Menus/0 Main/2 custombtn/mm_custombtn_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://4 Styling/1 Menus/0 Main/1 playbtn/mm_playbtn_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://4 Styling/1 Menus/0 Main/3 storebtn/mm_storebtn_hover.tres" type="StyleBox" id=8]
[ext_resource path="res://4 Styling/1 Menus/0 Main/0 Const/mm_norm.tres" type="StyleBox" id=9]
[ext_resource path="res://4 Styling/1 Menus/0 Main/1 playbtn/mm_playbtn_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://4 Styling/1 Menus/0 Main/2 custombtn/mm_custombtn_pressed.tres" type="StyleBox" id=11]
[ext_resource path="res://4 Styling/1 Menus/0 Main/3 storebtn/mm_storebtn_pressed.tres" type="StyleBox" id=12]
[ext_resource path="res://4 Styling/1 Menus/0 Main/4 settingsbtn/mm_settingsbtn_hover.tres" type="StyleBox" id=13]
[ext_resource path="res://4 Styling/1 Menus/0 Main/4 settingsbtn/mm_settingsbtn_pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://4 Styling/1 Menus/0 Main/6 quitbtn/mm_quitbtn_pressed.tres" type="StyleBox" id=15]
[ext_resource path="res://4 Styling/1 Menus/0 Main/6 quitbtn/mm_quitbtn_hover.tres" type="StyleBox" id=16]
[ext_resource path="res://4 Styling/1 Menus/0 Main/5 helpbtn/mm_helpbtn_pressed.tres" type="StyleBox" id=17]
[ext_resource path="res://4 Styling/1 Menus/0 Main/5 helpbtn/mm_helpbtn_hover.tres" type="StyleBox" id=18]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_helpbtn.tres" type="DynamicFont" id=19]
[ext_resource path="res://3 Fonts/1 Menus/0 Main/main_quitbtn.tres" type="DynamicFont" id=20]
[ext_resource path="res://1 Scripts/menuscript.gd" type="Script" id=21]
[ext_resource path="res://4 Styling/1 Menus/new_theme.tres" type="Theme" id=22]
[ext_resource path="res://3 Fonts/1 Menus/1 Play/playfont.tres" type="DynamicFont" id=23]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="menuroot" type="Node2D"]
script = ExtResource( 21 )

[node name="menucanvas" type="CanvasLayer" parent="."]
layer = 5

[node name="menumain" type="Control" parent="menucanvas"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_playbtn" type="Button" parent="menucanvas/menumain"]
margin_right = 1000.0
margin_bottom = 352.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_custombtn" type="Button" parent="menucanvas/menumain"]
margin_top = 352.0
margin_right = 768.0
margin_bottom = 552.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 3 )
text = "Custom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_storebtn" type="Button" parent="menucanvas/menumain"]
margin_top = 552.0
margin_right = 640.0
margin_bottom = 832.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = "Store"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_settingsbtn" type="Button" parent="menucanvas/menumain"]
margin_top = 832.0
margin_right = 960.0
margin_bottom = 1080.0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 4 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_helpbtn" type="Button" parent="menucanvas/menumain"]
margin_left = 1664.0
margin_right = 1920.0
margin_bottom = 256.0
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 19 )
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mm_quitbtn" type="Button" parent="menucanvas/menumain"]
margin_left = 1408.0
margin_top = 832.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/hover = ExtResource( 16 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 20 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuplay" type="Control" parent="menucanvas"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_scollcont" type="ScrollContainer" parent="menucanvas/menuplay"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 22 )
follow_focus = true
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_hboxcont" type="HBoxContainer" parent="menucanvas/menuplay/mp_scollcont"]
margin_right = 4504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer1" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_right = 640.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer1"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer2" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 644.0
margin_right = 1284.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer2"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer3" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 1288.0
margin_right = 1928.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer3"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer4" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 1932.0
margin_right = 2572.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer4"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer5" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 2576.0
margin_right = 3216.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer5"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer6" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 3220.0
margin_right = 3860.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer6"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_btncontainer7" type="Control" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont"]
margin_left = 3864.0
margin_right = 4504.0
rect_min_size = Vector2( 640, 0 )

[node name="mp_op1" type="Button" parent="menucanvas/menuplay/mp_scollcont/mp_hboxcont/mp_btncontainer7"]
margin_left = 128.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 23 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menucustom" type="Control" parent="menucanvas"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menustore" type="Control" parent="menucanvas"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menusettings" type="Control" parent="menucanvas"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuhelp" type="Control" parent="menucanvas"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menucamera" type="Camera2D" parent="menucanvas"]
visible = false
anchor_mode = 0
current = true

[node name="menuenv" type="WorldEnvironment" parent="menucanvas"]
environment = ExtResource( 1 )

[connection signal="pressed" from="menucanvas/menumain/mm_playbtn" to="." method="_on_mm_playbtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_custombtn" to="." method="_on_mm_custombtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_storebtn" to="." method="_on_mm_storebtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_settingsbtn" to="." method="_on_mm_settingsbtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_helpbtn" to="." method="_on_mm_helpbtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_quitbtn" to="." method="_on_mm_quitbtn_pressed"]
[connection signal="pressed" from="menucanvas/menumain/mm_quitbtn" to="." method="_on_mm_quitbtn2_pressed"]
